[package]
name = "dwmac-rs"
edition = "2021"
authors = ["MingYang <my@famer.me>"]
description = "Common traits and types for network device (NIC) drivers"
keywords = ["arceos", "driver", "nic"]
version.workspace = true
license.workspace = true
homepage.workspace = true
repository = "https://github.com/mingyang91/dwmac-rs.git"

[features]
default = []

[dependencies]
spin = "0.9"
log = "0.4"
bitflags = "2.9.1"
