[package]
name = "dwmac-rs"
edition = "2021"
authors = ["MingYang <my@famer.me>", "Xiao <xiaoluoyuan@163.com>"]
description = "DWMAC 5.x Ethernet Driver"
keywords = ["dwmac", "ethernet", "driver", "riscv"]
version = "0.2.0"
license = "MIT"
homepage = "https://github.com/elliott10/dwmac-rs.git"
repository = "https://github.com/elliott10/dwmac-rs.git"

[dependencies]
log = "0.4"
bitflags = "2.9.1"
spin = "0.9"
